fixing li item spacing

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -699,14 +699,6 @@ label { font-weight: normal; margin-bottom: auto; }
             li { padding-bottom: 8px; }
         }
 
-        ul.unstyled-list, ol.unstyled-list {
-            padding-left: 0px;
-            list-style-type: none;
-            line-height: 23px; }
-        ul.unstyled, ol.unstyled {
-            padding-left: 0px;
-            list-style-type: none;
-            line-height: 23px; }
 
         .card-disclosure {
             margin-left: -10px;
