--- a/myuw/static/css/resources.less
+++ b/myuw/static/css/resources.less
@@ -2,7 +2,7 @@
 @import (reference) "boilerplate.less";
 
 
-.resources-toc {
+ol.resources-toc {
 
     @media @two-column {
         display: flex;
@@ -15,7 +15,7 @@
         font-size: @fontsize-large;
         border-bottom: 1px solid @myuw-accent-gray;
         padding: 8px 0;
-
+        margin: 0;
     }
 
     @media @two-column {
